--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
 			<version>1.2</version>
 		</dependency>
 
+		<dependency> 
+		  <groupId>taglibs</groupId> 
+		  <artifactId>standard</artifactId> 
+		  <version>1.1.2</version> 
+		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
@@ -123,7 +128,7 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>2.4</version>
+				<version>3.2.2</version>
 				<configuration>
 					<warSourceDirectory>webapp</warSourceDirectory>
 					<failOnMissingWebXml>false</failOnMissingWebXml>
